# quick-make

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AbstractContent.hpp  CMakeContent.hpp  Input.hpp  MainContent.hpp  Output.hpp  Template.hpp  test.h
src/: CMakeContent.cpp  Input.cpp  MainContent.cpp  Output.cpp  Template.cpp  main.cpp
